first commit for project 3

--- a/sdi-project3.html
+++ b/sdi-project3.html
@@ -15,7 +15,7 @@
 <p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
 </article>
 <footer>
-    <p>Completion date, Michael Wilson</p>
+    <p>1-18-2012, Michael Wilson</p>
 </footer>
 <script type="text/javascript" src="Wilson_Michael_project3.js"></script>
 </body>
