--- a/sdi-project3.html
+++ b/sdi-project3.html
@@ -18,5 +18,6 @@
     <p>1-18-2012, Michael Wilson</p>
 </footer>
 <script type="text/javascript" src="Wilson_Michael_project3.js"></script>
+<script type="text/javascript" src="json.js"></script>
 </body>
 </html>
